Alterações de formatação

--- a/_posts/2019-02-19-latinoware2020.markdown
+++ b/_posts/2019-02-19-latinoware2020.markdown
@@ -10,10 +10,10 @@ tags: eventos
     <img src="https://i.imgur.com/kfAGxX2.jpg" style="width:75%; height:75%;">
 </p>
 
-A caravana foi um sucesso, muitos alunos puderam comparecer pelo preço que conseguimos fazer, claro que tivemos varios problemas durante a organização mas tudo faz parte do desafio e no final tudo deu certo. Nós membros e convidados tivemos acesso a varias palestras do mundo da tecnologia, conhecemos e conversamos pessoalmente com profissionais de toda America Latina que atráves de um bate-papo descontraido acabaram solucionando varios problemas que tinhamos e sanando dúvidas de como proceder com alguns projetos internos do Colmeia que já estavam _empacados_ a um tempo.
+<div style="text-align: justify"> A caravana foi um sucesso, muitos alunos puderam comparecer pelo preço que conseguimos fazer, claro que tivemos varios problemas durante a organização mas tudo faz parte do desafio e no final tudo deu certo. Nós membros e convidados tivemos acesso a varias palestras do mundo da tecnologia, conhecemos e conversamos pessoalmente com profissionais de toda America Latina que atráves de um bate-papo descontraido acabaram solucionando varios problemas que tinhamos e sanando dúvidas de como proceder com alguns projetos internos do Colmeia que já estavam empacados a um tempo.</div>
 
 <p style="text-align: center">
     <img src="https://i.imgur.com/Cw9Lt79.jpg" style="width:75%; height:75%;">
 </p>
 
-Esse senhor na foto conosco é Jon 'maddog' Hall, diretor do conselho do Linux Professional Institute e fundamental apoiador Linus Torvalds duranto primeiro porte de Linux. O conhecemos na Latinoware onde conversamos durante um bom tempo entre suas palestras, ele foi extremamente simpático e atencioso, trocamos ideias sobre projetos utilizando microcontroladores onde ele nos expôs sua placa Labrador e o cenário opensource. Conversamos também sobre um futuro projeto que está se iniciando que é o Project Cauã, liderado pelo maddog, parece um projeto muito interessante e com certeza iremos divulga-lo e apoia-lo em um futuro breve! Para nós foi uma experiência muito importante, conhecer uma personalidade do mundo de Software e Hardware Livre como ele com certeza auxiliará nossos futuros projetos.
+<div style="text-align: justify">Esse senhor na foto conosco é Jon 'maddog' Hall, diretor do conselho do Linux Professional Institute e fundamental apoiador Linus Torvalds duranto primeiro porte de Linux. O conhecemos na Latinoware onde conversamos durante um bom tempo entre suas palestras, ele foi extremamente simpático e atencioso, trocamos ideias sobre projetos utilizando microcontroladores onde ele nos expôs sua placa Labrador e o cenário opensource. Conversamos também sobre um futuro projeto que está se iniciando que é o Project Cauã, liderado pelo maddog, parece um projeto muito interessante e com certeza iremos divulga-lo e apoia-lo em um futuro breve! Para nós foi uma experiência muito importante, conhecer uma personalidade do mundo de Software e Hardware Livre como ele com certeza auxiliará nossos futuros projetos.</div>
