--- a/_posts/2020-03-01-carrinho.markdown
+++ b/_posts/2020-03-01-carrinho.markdown
@@ -5,5 +5,12 @@ title: Reconstrução do "Demolidão"
 author: Alexandre Werner
 tags: projetos exposicao
 ---
-O Colmeia apresenta um projeto em fase de desenvolvimento apelidado de "demolidão", neste projeto o objetivo inicial dele é fazer um carrinho para ser utilizado ser apresentado em locais como eventos e escolas, utilizado de sensores ultrassônicos o carrinho deve identificar um possível obstáculo e fazer o desvio deste, o projeto também acaba prevendo algumas atualizações para o carrinho onde o objetivo final é criar uma forma de interação bem interessante entre o apresentador e espectador, onde por exemplo, a pessoa se conectaria com o carrinho utilizando o celular e controlaria o mesmo, além disso existem mais planos para que este projeto faça a experiência de explicação do projeto algo mais interessante.
+<p style="text-align: center">
+    <img src="https://portaldoarduino.com.br/wp-content/uploads/2019/03/montagem-final.jpg" style="width:75%; height:75%;">
+    <p style="text-align: center">(O projeto acima foi encontrado na internet, logo teremos fotos e mais notícias do andamento do nosso projeto!)</p>
+</p>
+
+<div style="text-align: justify"> O Colmeia apresenta um projeto em fase de desenvolvimento apelidado de "demolidão", neste projeto o objetivo inicial dele é fazer um carrinho para ser apresentado em locais como eventos e escolas, utilizando de sensores ultrassônicos o carrinho deve identificar um possível obstáculo e fazer o desvio deste, o projeto também acaba prevendo algumas atualizações para o carrinho onde o objetivo final é criar uma forma de interação bem interessante entre o apresentador e espectador, onde por exemplo, a pessoa se conectaria com o carrinho utilizando o celular e controlaria o mesmo, além disso existem mais planos para que este projeto faça a experiência de explicação do projeto algo mais interessante.
+</div>
+
 
